# AepTestBot

./: Log.txt  main.py  pyproject.toml  restarter.py
cogs/: Greetings.py  context_menu.py  simple.py
