[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
numpy = "^1.22.2"
py-cord = "^2.3.0"
discord = "^1.7.3"
pymongo = "^4.3.3"
Flask = "^2.2.2"
gevent = "^22.10.2"
requests = "^2.28.2"
bs4 = "^0.0.1"
requests-html = "^0.10.0"
selenium = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"